karnc/tests/fixtures/positive/151_queue_simple/src/mailer.karn
context mailer

type EmailJob = {
  to:      String,
  subject: String,
}

service outbox from queue("outbound-email") {
  on message(message: EmailJob) -> Effect[QueueResult] {
    Ack
  }
}
