karnc/tests/fixtures/negative/115_queue_bad_params/src/svc.karn
context svc

type Msg = { a: String }

service worker from queue("q") {
  on message(message: Msg, extra: String) -> Effect[QueueResult] {
    Ack
  }
}
